--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,14 @@
 		"declaration": true,
 		"typeRoots": ["./dist/index.d.ts", "node_modules/@types"],
 		"noEmit": true,
-		"jsx": "react-jsx"
+		"jsx": "react-jsx",
+		"paths": {
+			"@/*": ["./src/*"],
+			"@/components/*": ["./src/components/*"],
+			"@/hooks/*": ["./src/hooks/*"]
+		}
 	},
+
 	"include": ["src", "./src/index.ts"],
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
